# eq-questionnaire-runner

./: .codacy.yaml  .codecov.yml  .design-system-version  .development.env  .djlintrc  .dockerignore  .eslintignore  .eslintrc  .functional-tests.env  .gitignore  .mutmut-cache  .prettierignore  .pylintrc  .schemas-version  .sourcery.yml  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  _macro.njk  application.py  babel.cfg  cloudbuild-deploy.yaml  cloudbuild.yaml  cosmic-ray.ini  cosmic-ray.sqlite  create_schema.sh  dependabot.yaml  dev-keys.yml  dev-secrets.yml  docker-compose-dev-linux.yml  docker-compose-dev-mac.yml  docker-compose-dev.yml  docker-compose-functional.yml  docker-compose-schema-validator.yml  docker-compose-sds.yml  docker-compose.yml  (+20 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yaml  release.yml
.github/workflows/: autosquash.yml  build.yml  codeql-analysis.yml  codeql.yml  cosmic-ray.yml  design_system_release_pr.yml  main.yml  master.yml  mutmut.yml  pull_request.yml  schemas_release_pr.yml  templates_release_pr.yml  test.yml  v3_census.yml  workflow_pr.yaml
app/: globals.py  jinja_filters.py  keys.py  secrets.py  settings.py  setup.py  supplementary_data.py
app/authentication/: auth_payload_version.py  auth_payload_versions.py  authenticator.py  cookie_session.py  exceptions.py  expired_token_exception.py  jti_claim_storage.py  no_questionnaire_state_exception.py  no_token_exception.py  roles.py  user.py  user_id_generator.py
app/cloud_tasks/: __init__.py  cloud_task_publishers.py  exceptions.py
app/data_model/: answer.py  answer_store.py  app_models.py  list_store.py  progress.py  progress_store.py  questionnaire_store.py  relationship_store.py  session_data.py  session_store.py
app/data_models/: __init__.py  answer.py  answer_store.py  app_models.py  data_stores.py  fulfilment_request.py  list_store.py  metadata_proxy.py  progress.py  progress_store.py  questionnaire_store.py  relationship_store.py  session_data.py  session_store.py  supplementary_data_store.py
app/forms/: __init__.py  address_form.py  custom_fields.py  date_form.py  duration_form.py  email_conformation_form.py  email_form.py  error_messages.py  field_factory.py  fields.py  questionnaire_form.py  validators.py
app/helpers/: __init__.py  address_lookup_api_helper.py  form_helper.py  form_helpers.py  header_helpers.py  language_helper.py  metadata_helpers.py  schema_helpers.py  session_helpers.py  template_helper.py  template_helpers.py  url_param_serializer.py  url_safe_helper.py  url_safe_serializer.py  uuid_helper.py
app/libs/: utils.py
app/oidc/: gcp_oidc.py  local_oidc.py  oidc.py  oidc_credentials.py  token_generator.py
app/publisher/: __init__.py  publisher.py
app/questionnaire/: __init__.py  base_questionnaire_store_updater.py  dependencies.py  dynamic_answer_options.py  location.py  path_finder.py  placeholder_parser.py  placeholder_renderer.py  placeholder_transforms.py  plural_forms.py  questionnaire_schema.py  questionnaire_store_updater.py  relationship_location.py  relationship_router.py  renderer.py  resolver.py  return_location.py  router.py  routing_path.py  rules.py  schema_utils.py  value_source_resolver.py  variants.py  when_rules.py
app/routes/: dump.py  errors.py  flush.py  individual_response.py  questionnaire.py  schema.py  session.py  static.py
app/services/: collection_instrument_registry.py  supplementary_data.py
app/storage/: __init__.py  datastore.py  dynamodb.py  encrypted_questionnaire_storage.py  metadata_parser.py  redis.py  storage.py  storage_encryption.py
app/submitter/: __init__.py  convert_payload_0_0_1.py  convert_payload_0_0_3.py  converter.py  converter_v2.py  previously_submitted_exception.py  submitter.py
app/survey_config/: __init__.py  business_config.py  census_config.py  link.py  social_survey_config.py  survey_config.py  survey_type.py  survey_types.py  (+1 more)
ci/: README.md  backup_questionnaire_state.yaml  build.yaml  cloudbuild-build-and-deploy.yaml  deploy.yaml  deploy_app.sh  deploy_app.yaml  deploy_credentials.sh  deploy_credentials.yaml  pause_cloud_task_queue.yaml  purge_expired_questionnaire_state.yaml  purge_expired_sessions.yaml  purge_expired_sessions_from_datastore.yaml  purge_sessions_from_datastore.yaml  purge_submitted_questionnaire_state.yaml  restore_questionnaire_state.yaml  resume_cloud_task_queue.yaml  wait.yaml
doc/: profiling.md  python-type-hinting.md  run-mock-sds-endpoint.md
k8s/: deploy_app.sh  deploy_credentials.sh
mock_sds/: mock_sds_endpoint.py
scripts/: README.md  build_schemas.sh  extract_translation_templates.py  generate_integration_test.py  generate_pages.py  load.sh  load_print_styles_from_cdn.sh  load_release.sh  load_schemas.sh  load_templates.sh  merge_profiles.py  mock_sds_endpoint.py  run_lint.sh  run_lint_python.sh  run_mypy.sh  run_sds.sh  run_tests.sh  run_tests_functional.sh  run_tests_unit.sh  run_travis.sh  run_validator.sh  schemas_check.py  split_functional_specs.sh  test_schemas.sh  translate_schemas.py  update_schemas_version.py  update_schemas_version.sh  validate_test_schemas.py  validate_test_schemas.sh
templates/: _submit.html  another-email.html  answersummary.html  calculatedsummary.html  census-thank-you.html  confirm-email.html  confirmation-email-sent.html  confirmation-email.html  confirmation.html  confirmationquestion.html  email-confirmation-sent.html  email-confirmation.html  email.html  feedback-sent.html  feedback.html  final-summary.html  grandcalculatedsummary.html  hub.html  interstitial.html  introduction.html  list-action.html  list-action.tmpl  listaddquestion.html  listcollector.html  listcollectorcontent.html  listcollectorsummary.html  listremovequestion.html  listrepeatingquestion.html  multiple_survey.html  preview.html  primarypersonlistcollector.html  question.html  sectionsummary.html  signed-out.html  submit-with-summary.html  submit.html  submitted-response.html  summary.html  thank-you.html  view-submitted-response.html
webdriverio-test/: package-lock.json  package.json  wdio.conf.js
(+1833 files in other folders)
