[tool.djlint]
blank_line_after_tag="load,extends,import,from"
blank_line_before_tag="load,extends,block"
max_line_length=120
# _base.html excluded due to the bad </script> nesting after format
exclude=".templates/layouts/_base.html"
# when using double quote escape sequence in strings we get "H025 Tag seems to be an orphan" false positives
ignore="H025"

[tool.poetry]
name = "eq-questionnaire-runner"
version = "1.0.0"
description = "ONS Digital eQ Questionnaire Runner App"
authors = ["ONSDigital"]

[tool.poetry.group.dev.dependencies]
# update dependabot.yaml when adding new dependencies
pep8 = "^1.7.1"
mock = "^5.1.0"
pytest-cov = "^5.0.0"
jsonschema = "^4.21.1"
pylint = "^3.2.7"
pylint-mccabe = "^0.1.3"
pylint-absolute-imports = "^1.1.0"
beautifulsoup4 = "^4.12.3"
httmock = "^1.4.0"
flake8 = "^7.1.1"
flake8-debugger = "^4.1.2"
flake8-mock = "^0.4"
flake8-print = "^5.0.0"
flake8-tuple = "^0.4.1"
flake8-datetimez = "^20.10.0"
moto = "^5.0.13"
freezegun = "^1.4.0"
pytest-xdist = "^3.5.0"
fakeredis = "^2.23.5"
mypy = "^1.11.2"
pytest-flask = "^1.3.0"
pytest = "^8.3.2"
pytest-sugar = "^1.0.0"
responses = "^0.25.0"
types-simplejson = "^3.19.0.20240310"
types-requests = "^2.31.0.20240406"
types-redis = "^4.6.0.20240819"
types-PyYAML = "^6.0.12.20240808"
types-python-dateutil = "^2.9.0.20240821"
pytest-mock = "^3.12.0"
types-cachetools = "^5.3.0.7"
types-pytz = "^2024.1.0.20240417"
playwright = "^1.42.0"
black = "^24.2.0"
djlint = "^1.34.2"
flake8-quotes = "^3.4.0"


[tool.poetry.dependencies]
# update dependabot.yaml when adding new dependencies
python = "^3.11.4"
colorama = "^0.4.6"
flask = "^3.0.2"
flask-babel = "^4.0.0"
flask-login = "^0.6.3"
flask-wtf = "^1.2.1"
google-cloud-datastore = "^2.19.0"
grpcio = "^1.64.1"
gunicorn = "^23.0.0"
pika = "^1.3.2"
pyyaml = "^6.0.1"
requests = "^2.32.0"
sdc-cryptography = "^1.2.1"
structlog = "^24.1.0"
ua-parser = "^0.18.0"
blinker = "^1.7.0"
boto3 = "^1.34.151"
humanize = "^4.9.0"
flask-talisman = "^1.1.0"
marshmallow = "^3.21.3"
python-snappy = "^0.7.1"
google-cloud-storage = "^2.17.0"
jsonpointer = "^3.0"
redis = "^5.0.8"
flask-compress = "^1.14"
htmlmin = "^0.1.12"
coloredlogs = "^15.0.1"
uwsgi = "^2.0.24"
email-validator = "^2.1.2"
itsdangerous = "^2.1.2"
google-cloud-pubsub = "^2.23.0"
google-cloud-tasks = "^2.16.3"
simplejson = "^3.19.2"
markupsafe = "^2.1.5"
pdfkit = "^1.0.0"
ordered-set = "^4.1.0"
cachetools = "^5.3.0.7"
gevent = "^24.2.1"
babel = "==2.14.0"  # Temporarily pinned - problem for translations found in v2.15.0, see: https://github.com/ONSdigital/eq-questionnaire-runner/pull/1384

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
