[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "eq-questionnaire-runner"
version = "0.1.0"
description = "EQ Census 2021 questionnaire runner"
authors = ["ONS"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
colorama = "*"
flask = "1.1.2"
flask-babel = "*"
flask-login = "*"
flask-themes2 = "*"
flask-wtf = "0.14.3"
gevent = { version = "*", markers = "platform_python_implementation == 'CPython'" }
google-cloud-datastore = "2.20.2"
grpcio = "*"
gunicorn = "20.0.4"
newrelic = "*"
pika = "*"
pyyaml = "*"
requests = "*"
sdc-cryptography = "*"
structlog = "20.1.0"
ua-parser = "*"
blinker = "*"
boto3 = "*"
humanize = "*"
flask-talisman = "*"
marshmallow = "*"
python-snappy = "*"
google-cloud-storage = "3.1.0"
jsonpointer = "*"
redis = "*"
flask-compress = "*"
htmlmin2 = "0.1.13"
coloredlogs = "*"
uwsgi = "*"
email-validator = "*"
itsdangerous = "1.1.0"
google-cloud-pubsub = "2.29.0"
google-cloud-tasks = "2.19.2"
cython = "<3"
simplejson = "*"
setuptools = "<81"
jinja2 = "<3"
markupsafe = "1.1.1"
werkzeug = "1.0.1"
wtforms = "2.3.3"
google-api-core = "2.24.2"
google-cloud-core = "2.4.3"
google-auth = "2.43.0"
cryptography = "46.0.7"

[tool.poetry.group.dev.dependencies]
pep8 = "*"
mock = "*"
pytest-cov = "*"
jsonschema = "*"
pylint = "*"
pylint-mccabe = "*"
pylint-quotes = "*"
beautifulsoup4 = "*"
httmock = "*"
flake8 = "*"
flake8-blind-except = "*"
flake8-debugger = "*"
flake8-mock = "*"
flake8-print = "*"
flake8-tuple = "*"
moto = "*"
freezegun = "*"
pytest-xdist = "*"
fakeredis = "*"
mypy = "*"
black = "~26.3.1"
pytest-flask = "*"
pytest = "*"
pytest-sugar = "*"
responses = "0.12.0"

[tool.black]
target_version = ["py313"]
